# pokepronouns

./: .gitmodules  CMakeLists.txt  data.txt  pokepronouns.cpp
